--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 				<h2 class="milk_text">Featured Brands</h2>
 
 				<!--/////////// Featured Brands //////////-->
-				<div class="wrapper">
-      				<section class="shadow" class="col-2" first>
+				<div class="wrapper" clearfix>
+      				<section class="shadow" id="col-2" first>
       					<figure>
       						<img src="images/shoes_on_grass.jpg" alt="Photo of shoes in the wet grass">
       						<figcaption>royalty free image from www.sxc.hu</figcaption>
@@ -92,8 +92,8 @@
 				<!--/////////// Ends Featured Brands //////////-->
 				
 				<!--/////////// Archive List //////////-->
-				<div ="wrapper">
-      				<section class="shadow" class="col-1">
+				<div class="wrapper" clearfix>
+      				<section class="shadow" id="col-1">
       					<h2>Shoe Archive</h2>
       					<h3><a href="#">2014</a></h3>
       					<ul>
@@ -139,6 +139,7 @@
 				<!--/////////// End Archive List //////////-->
 
 				<!--/////////// Deals //////////-->
+				<div class="wrapper">
 				<section class="shadow">
 					<figure>
 						<img src="images/lady_bug_shoe.jpg" alt="Pair of Lady Bug Shoes">
@@ -168,11 +169,12 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 				</section>
+			</div>
 				<!--/////////// Ends Deals //////////-->
 
 			</div><!-- .wrapper -->
 
-		</div><!-- #wood -->
+		</div> <!-- #wood -->
 
 		<!--/////////// Details //////////-->
 		<section id="details" class="clearfix">
