--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
 				<!--/////////// Deals //////////-->
 				<div class="wrapper">
-				<section class="shadow">
+				<section class="shadow" columns>
 					<figure>
 						<img src="images/lady_bug_shoe.jpg" alt="Pair of Lady Bug Shoes">
 						<figcaption>royalty free image from www.sxc.hu</figcaption>
